# miniatura

./: CMakeLists.txt
example/: CMakeLists.txt  main.cc
miniatura/: CMakeLists.txt  basedefs.h
miniatura/base/: serialize.h
miniatura/http/: CMakeLists.txt  parser.cc  parser.h  server.cc  server.h
